[package]
name = "yew-sidebar"
version = "0.1.2"
description = "📁 An ultra-flexible and lightning-fast sidebar component for the Yew framework."
license = "MIT"
repository = "https://github.com/wiseaidev/yew-sidebar"
homepage = "https://github.com/wiseaidev/yew-sidebar"
documentation = "https://docs.rs/yew-sidebar/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"
exclude = ["/examples"]
keywords = ["yew", "rust", "sidebar", "yew-sidebar"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-accordion = "0.1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
